--- a/frontend/ng8-frontend/src/app/app.component.html
+++ b/frontend/ng8-frontend/src/app/app.component.html
@@ -1,51 +1,21 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button mat-icon-button>
-      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-    </button>
-    <h1>SimpleCRM</h1>
-    <span class="menu-spacer"></span>
-    <div>
-      <a mat-button [routerLink]="'/accounts'"> Accounts </a>
-      <a mat-button [routerLink]="'/create-account'"> Create Account </a>
-      <a mat-button [routerLink]="'/contacts'"> Contacts </a>
-      <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-      <a mat-button [routerLink]="'/activities'"> Activities </a>
-      <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
-
-    </div>
-  </mat-toolbar-row>
-
-  <mat-toolbar-row>
-      <span style="font-size: 12px;">SimpleCRM helps you easily manage your contacts</span>
+      <span style="font-size: 12px;">Robot vision</span>
     </mat-toolbar-row>
 </mat-toolbar>
 
 <mat-sidenav-container>
-  <mat-sidenav #sidenav>
+  <mat-sidenav #sidenav  mode="side" opened>
     <mat-nav-list>
 
-      <a mat-list-item [routerLink]="'/accounts'"> Accounts2 </a>
-      <a mat-list-item [routerLink]="'/create-account'"> Create Account2 </a>
-      <a mat-list-item [routerLink]="'/contacts'"> Contacts2 </a>
-      <a mat-list-item [routerLink]="'/create-contact'"> Create Contact2 </a>
-      <a mat-list-item [routerLink]="'/activities'"> Activities2 </a>
-      <a mat-list-item [routerLink]="'/create-activity'"> Create Activity2 </a>
-      <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close2</a>
-
+      <a mat-list-item [routerLink]="'/home'"> Home </a>
+      <a mat-list-item [routerLink]="'/cnn'"> Convolutional CNN </a>
+      <a mat-list-item [routerLink]="'/contacts'"> Contacts</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <div style="height: 88vh;">
-
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
